[gd_scene load_steps=3 format=3 uid="uid://cgr00cclcrbbq"]

[ext_resource type="Theme" uid="uid://b3obd08f7jxct" path="res://assets/misc/base_theme.tres" id="1_n64d3"]
[ext_resource type="Script" path="res://scripts/menus/GameOver.gd" id="2_g07hn"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_n64d3")
script = ExtResource("2_g07hn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 160.0
offset_top = 279.0
offset_right = 1005.0
offset_bottom = 367.0
theme = ExtResource("1_n64d3")
theme_override_font_sizes/normal_font_size = 64
text = "You have Died"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 343.0
offset_top = 402.0
offset_right = 805.0
offset_bottom = 486.0
theme = ExtResource("1_n64d3")
alignment = 1

[node name="RestartButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="MenuButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Quit to Menu"

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.337255, 0.137255, 0.184314, 0.615686)

[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/RestartButton" to="." method="_button_hover"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/RestartButton" to="." method="_restart_button_press"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/MenuButton" to="." method="_button_hover"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/MenuButton" to="." method="_menu_button_press"]
